<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.forwarzz.tpone.CreateContactActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_contact_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/avatar_rounded" />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Prénom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_title"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_title"
        android:inputType="phone" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/city_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favori"
        android:layout_marginTop="20dp"
        android:switchPadding="50dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/home_confirmation_button" />
</LinearLayout>